# Operation_analizer

./: README.md  pyproject.toml
data/: operations.xls
src/: logger.py  main.py  reports.py  services.py  utils.py  views.py
tests/: __init__.py  test_reports.py  test_services.py  test_utils.py  test_veiws.py  test_views.py
tests/test_data/: test_1.json  test_2.json  test_operations.xls  test_transactions.xls
