[tool.poetry]
name = "operation-analizer"
version = "0.1.0"
description = ""
authors = ["vavil <vavilon164@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
logging = "^0.4.9.6"
pandas = "^2.1.3"
openpyxl = "^3.1.2"
requests = "^2.31.0"
xlrd = "^2.0.1"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

[tool.poetry.group.lint.dependencies]
mypy = "^1.7.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
black = "^23.11.0"
types-requests = "^2.31.0.10"
pandas-stubs = "^2.1.1.230928"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = false
warn_return_any = true
exclude = 'venv

[tool.black]
line-length = 119

[tool.isort]
line_length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
